Enable scroll anchoring.

BUG=657537

Review-Url: https://chromiumcodereview.appspot.com/2421263003
Cr-Commit-Position: refs/heads/master@{#426337}

Former-commit-id: 6d380ba3ab246a15d6269a75328f481336b53ee1